# whispy

./: .gitignore  README.md  app.py  config.py  pyproject.toml  tasks.py  transcribe.py
templates/: index.html
